version 0.15, Initial attempt to fix font error on IOS devices in dark mode, not tested yet.

--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -16,3 +16,6 @@
     .content1{
       --background: #c1ffd1;
   }
+  .textfont1{
+    --color: black;
+  }
