--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -1,3 +1,12 @@
 .item2{
     --background: #c1ffd1;
+    --color: black;
+}
+
+.titlefont3{
+    --color: grey;
+}
+
+.textfont3{
+    --color: black;
 }
